add data/image W1

--- a/content/20170108.md
+++ b/content/20170108.md
@@ -17,11 +17,11 @@ Author: 40423245
 
 在按下start之後，會出現錯誤的圖案<span style="background-color: #55ff55">(1)</span>，這是因為stunnel資料夾裡的config/styunnel.conf裡的ip與電腦的ip不同(styunnel.conf裡的分號代表註解)，可至cmd打ipconfig/all的指令，找到電腦的ip位置並將其複製、貼到styunnel.conf裡<span style="background-color: #55ff55">(2)</span>，(443為https的Port號不須修改)，如果有設置proxy就必須要到設定proxy的地方按進階，將電腦ip設為額外ip，這樣就可至google打網址，並且嘗試以anonymous（無名氏/遊客）的身份進入https://192.168.1.24/2017springvcp_hw/index。
 
-<span style="background-color: #55ff55">(1)</span><img src="./../data/W1/stunnel Error.png" width="240" />
+<span style="background-color: #55ff55">(1)</span><img src="./../data/image W1/stunnel Error.png" width="240" />
 
-<span style="background-color: #55ff55">(2)</span><img src="./../data/W1/stunnel ip位置.png" width="240" />
+<span style="background-color: #55ff55">(2)</span><img src="./../data/image W1/stunnel ip位置.png" width="240" />
 
-<img src="./../data/W1/2017springvcp_hw-index.png" width="560" />
+<img src="./../data/image W1/2017springvcp_hw-index.png" width="560" />
 
 <span style="background-color: #ffff00">三.</span>利用python程式碼控制Vrep裡的單連桿作動。
 
@@ -31,9 +31,9 @@ Author: 40423245
 
 <img src="./../data/jansen_solvespace_2.png" width="560" />
 
-<img src="./../data/W1/fourbar345.png" width="560" />
+<img src="./../data/image W1/fourbar345.png" width="560" />
 
-<img src="./../data/W1/one_link_robot_remoteAPI.png" width="560" />
+<img src="./../data/image W1/one_link_robot_remoteAPI.png" width="560" />
 
 ##第一週心得影片
 
