add W2.md and reveal add W1

--- a/content/20170222.md
+++ b/content/20170222.md
@@ -1,4 +1,4 @@
-Title: 2017/2/22 W1
+Title: 2017/02/22 W1
 Date: 2017-02-22 11:00
 Category: Course
 Tags: notes, w1
@@ -35,7 +35,11 @@ Author: 40423245
 
 <img src="./../data/image W1/one_link_robot_remoteAPI.png" width="560" />
 
+##第一週心得  
+  在經過上學期得學習，發現這學期的課程變得有點難，在每個禮拜最後一堂課還要上台分享，期望能迅速地進入狀況。
+
 ##第一週心得影片
 
 <iframe src="https://player.vimeo.com/video/205656178" width="560" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/205656178">40423245機械設計工程系-協同產品設計實習課程-W1</a> from <a href="https://vimeo.com/user47996237">40423245</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
