edit W3.md add class note

--- a/content/20170308.md
+++ b/content/20170308.md
@@ -9,11 +9,17 @@ Author: 40423245
 
 <!-- PELICAN_END_SUMMARY -->
 
-<span style="background-color: #ffff00">一.</span>利用python找出缺課人員
-
 ##第三週上課內容
 
+從 https://mde2al.kmol.info 進入wiki檢視每周進度，並介紹了hyperworks這套軟體，包括檢測受力.受熱.流力.最小化資源利用‧‧‧，還給我們十則影片翻譯，以便了解hyperworks以及增進英文能力。
+
+更改start的fossil路徑，讓程式自行尋找電腦ip，並由組長建立組別的https，讓組員在wiki上分配工作以及上傳作業。
+
 ##第三週任務
+
+<span style="background-color: #ffff00">1.</span>請至課程網頁中 w3 Hyperworks 處瀏覽 10 個影片, 請每組選兩個影片, 設法寫出該影片的英文逐字稿, 目的是希望能夠最佳化行走機構的零件
+
+<button onClick="lity('https://player.vimeo.com/video/207229473')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks1</button> <button onClick="lity('https://player.vimeo.com/video/207229488')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks2</button> <button onClick="lity('https://player.vimeo.com/video/207229503')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks3</button> <button onClick="lity('https://player.vimeo.com/video/207229515')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks4</button><button onClick="lity('https://player.vimeo.com/video/207239262')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks 14-1</button> <button onClick="lity('https://player.vimeo.com/video/207239448')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks 14-2</button> <button onClick="lity('https://player.vimeo.com/video/207239288')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks 14-3</button> <button onClick="lity('https://player.vimeo.com/video/207239276')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks 14-4</button> <button onClick="lity('https://player.vimeo.com/video/207239300')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks 14-5</button> <button onClick="lity('https://player.vimeo.com/video/207240382')"><span class="glyphicon glyphicon-facetime-video"></span> Hyperworks 14-6</button>
 
 <span style="background-color: #ffff00">2.</span> 請完成 Solvespace 30-50-60 cm 比例的四連桿組立, 並轉出 stl 檔案, 以 import 方式轉入 V-rep
 
