--- a/content/20170308.md
+++ b/content/20170308.md
@@ -79,6 +79,9 @@ dx= -22.53868820588739 dy= 55.60582284219696
 
 ex= -66.44406598905394 ey= 79.52898738448577
 
+##心得
+這學期的倉儲的wiki要在不同的地方編輯，還需要時間來適應，還有在做任務一時，明顯的發現到自己英文能力的不足，希望能盡快的補足這方面的能力
+
 ##任務二影片
 <iframe src="https://player.vimeo.com/video/207629426" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/207629426">40423245機械設計工程系 - 協同產品設計實習課程-W3任務二完成 Solvespace 30-50-60 cm 比例的四連桿組立</a> from <a href="https://vimeo.com/user47996237">40423245</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
