--- a/content/20170308.md
+++ b/content/20170308.md
@@ -13,7 +13,18 @@ Author: 40423245
 
 從 https://mde2al.kmol.info 進入wiki檢視每周進度，並介紹了hyperworks這套軟體，包括檢測受力.受熱.流力.最小化資源利用‧‧‧，還給我們十則影片翻譯，以便了解hyperworks以及增進英文能力。
 
-更改start的fossil路徑，讓程式自行尋找電腦ip，並由組長建立組別的https，讓組員在wiki上分配工作以及上傳作業。
+<span style="background-color: #ffff00">1.</span>
+建置fossil，在cmd裡進入Y\tmp\fossil_repo的資料夾，輸入fossil init <span style="background-color: #46A3FF">foo</span>.fossil的指令(<span style="background-color: #46A3FF">foo</span>的位置可輸入組別名稱)，第三行有帳戶名稱與密碼需特別注意。
+
+<img src="./../data/image W3/fossil init.png" width="560" />
+
+可至admin/user裡更改帳戶名稱及密碼
+
+<img src="./../data/image W3/fossl password.png" width="560" />
+
+可至admin/configuration裡更改標題
+
+<img src="./../data/image W3/fossil configuration.png" width="560" />
 
 ##第三週任務
 
