rm title marquee

--- a/content/20170222.md
+++ b/content/20170222.md
@@ -5,7 +5,7 @@ Tags: notes, w1
 Slug: 2017spring-cd-W1
 Author: 40423245
 
-##<marquee direction="left"  height="40" width="600" scrollamount="10" behavior="slide">2017Spring 協同產品設計實習課程  第一週</marquee>
+##2017Spring 協同產品設計實習課程  第一週
 
 <!-- PELICAN_END_SUMMARY -->
 
