--- a/content/20170315.md
+++ b/content/20170315.md
@@ -5,10 +5,57 @@ Tags: notes, w4
 Slug: 2017spring-cd-W4
 Author: 40423245
 
-##<marquee direction="left"  height="40" width="600" scrollamount="10" behavior="slide">2017Spring 協同產品設計實習課程  第四週</marquee>
+##2017Spring 協同產品設計實習課程  第四週
 
 <!-- PELICAN_END_SUMMARY -->
 
+##上課筆記
 
+<span style="background-color: #ffff00">1.</span>Fossil新增組員以及組員權限設定
 
+<span style="background-color: #ffff00">2.</span>協同產品設計實習課程-W4在Onshape繪製單連桿機構並轉出stl檔案
 
+<span style="background-color: #ffff00">3.</span>協同產品設計實習課程-W4在solvespace繪製單連桿機構並轉出stl檔案
+
+##練習
+
+<span style="background-color: #ffff00">1.</span>Fossil新增組員以及組員權限設定
+
+fossil開啟後 ，到admin/user/add裡可新增筆記倉儲裡的成員
+
+<img src="./../data/image W4/fossil add user.png" width="480" />
+
+<span style="background-color: #ffff00">2.</span>協同產品設計實習課程-W4在Onshape繪製單連桿機構並轉出stl檔案
+
+繪製出所需零件 ，底座、軸及單連桿，並將其組立起來
+
+<a href="https://cad.onshape.com/documents/414f3a744b87a17b4d845380/w/576a159abfb695fa37f8e121/e/e6da162a4b20484587e269d6">Onshape單連桿機構</a>
+
+<span style="background-color: #ffff00">3.</span>協同產品設計實習課程-W4在solvespace繪製單連桿機構並轉出stl檔案
+
+繪製出所需零件 ，底座、軸及單連桿，並將其組立起來
+
+<iframe src="./../data/shapes W4/ass.html" width="640" height="420"></iframe>
+
+##練習心得
+
+這禮拜所繪製的單連桿零件還蠻簡單的。
+
+##練習影片
+
+<span style="background-color: #ffff00">1.</span>Fossil新增組員以及組員權限設定
+
+<button onClick="lity('https://vimeo.com/208973584')"><span class="glyphicon glyphicon-facetime-video"></span> Fossil新增組員</button> 
+
+<span style="background-color: #ffff00">2.</span>協同產品設計實習課程-W4在Onshape繪製單連桿機構並轉出stl檔案
+
+<button onClick="lity('https://vimeo.com/208973817')"><span class="glyphicon glyphicon-facetime-video"></span> Onshape單連桿機構</button> 
+
+<span style="background-color: #ffff00">3.</span>協同產品設計實習課程-W4在solvespace繪製單連桿機構並轉出stl檔案
+
+<button onClick="lity('https://vimeo.com/208973989')"><span class="glyphicon glyphicon-facetime-video"></span> solvespace單連桿機構</button> 
+
+<span style="background-color: #ffff00">4.</span>回家練習
+
+<button onClick="lity('https://vimeo.com/208974147')"><span class="glyphicon glyphicon-facetime-video"></span>回家練習
+</button> 
