--- a/content/20170322.md
+++ b/content/20170322.md
@@ -5,14 +5,92 @@ Tags: notes, w5
 Slug: 2017spring-cd-W5
 Author: 40423245
 
-##<marquee direction="left"  height="40" width="600" scrollamount="10" behavior="slide">2017Spring 協同產品設計實習課程  第五週</marquee>
+##2017Spring 協同產品設計實習課程  第五週
 
 <!-- PELICAN_END_SUMMARY -->
 
+##上課筆記
 
+<span style="background-color: #ffff00">1.</span>如何在fossil筆記倉儲主頁顯示作業
 
+<span style="background-color: #46A3FF">2.</span>將單連桿轉入V-rep並使其作動
 
+##練習
 
+<span style="background-color: #ffff00">1.</span>如何在fossil筆記倉儲主頁顯示作業
+
+只要在wiki裡新增一個與倉儲筆記同名稱的檔案，即可在fossil筆記倉儲主頁顯示作業
+
+<img src="./../data/image W5/fossil_home.png" width="480" />
+
+在建立wiki有三種格式可選擇，wiki、Markdown及html，安全性以wiki最高，Markdown其次，html最低
+
+<img src="./../data/image W5/fossil_wiki.png" width="480" />
+
+<span style="background-color: #46A3FF">2.</span>將單連桿轉入V-rep並使其作動
+先將在繪圖軟體繪製好的單連桿利用Import/Mesh匯入V-rep
+
+<img src="./../data/image W5/V-rep import.png" width="480" />
+
+接著利用Divide selected shapes將單連桿的零件分開
+
+<img src="./../data/image W5/V-rep Divide shapes.png" width="480" />
+
+利用Add/Joint/Revolute新增一個旋轉軸
+
+<img src="./../data/image W5/V-rep onelink Revolute.png" width="480" />
+
+將旋轉軸的位置跟繪製的軸合併再一起
+
+<img src="./../data/image W5/V-rep onelink Item position.png" width="480" />
+
+設置好各零件的從屬關係
+
+<img src="./../data/image W5/V-rep onelink ass.png" width="480" />
+
+接著設定旋轉軸的角速度，並固定單連桿
+
+<img src="./../data/image W5/V-rep onelink Joint Dynamic.png" width="480" />
+
+接著將桿子設為動態物件
+
+<img src="./../data/image W5/V-rep onelink body Dynamic.png" width="480" />
+
+##練習心得
+
+發現V-rep是個非常強大的軟體，可以模擬真實的情況，單連桿是較為簡單的練習，因此很快就了解了狀況。
+
+##練習影片
+
+<iframe src="https://player.vimeo.com/video/210093581" width="640" height="454" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/210093581">40423245機械設計工程系 - 協同產品設計實習課程-W5上課練習</a> from <a href="https://vimeo.com/user47996237">40423245</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+##回家練習
+
+跟單連桿一樣先將檔案轉入V-rep，接著將零件分開，之後加入一個旋轉軸，將旋轉軸的位置跟繪製的軸合併再一起
+
+<img src="./../data/image W5/V-rep Item position.png" width="480" />
+
+四個旋轉軸都設定好了之後，設定好各零件的從屬關係
+
+<img src="./../data/image W5/V-rep ass.png" width="480" />
+
+加入兩個Dummy，一個放置在最後一個旋轉軸，另一個放置在第一桿子下
+
+<img src="./../data/image W5/V-rep Dummy.png" width="480" />
+
+設定好兩者的關係
+
+<img src="./../data/image W5/V-rep Scene Object.png" width="480" />
+
+##回家練習心得
+
+四連桿相較於單連趕多了個Dummy，在它的使用上花費了不少時間。
+
+##回家練習影片
+
+<iframe src="https://player.vimeo.com/video/210037771" width="640" height="454" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/210037771">40423245機械設計工程系 - 協同產品設計實習課程-W5回家練習</a> from <a href="https://vimeo.com/user47996237">40423245</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 
 
