--- a/content/20170301.md
+++ b/content/20170301.md
@@ -5,7 +5,7 @@ Tags: notes, w2
 Slug: 2017spring-cd-W2
 Author: 40423245
 
-##<marquee direction="left"  height="40" width="600" scrollamount="10" behavior="slide">2017Spring 協同產品設計實習課程  第二週</marquee>
+##2017Spring 協同產品設計實習課程  第二週
 
 <!-- PELICAN_END_SUMMARY -->
 
