--- a/content/20170315.md
+++ b/content/20170315.md
@@ -13,9 +13,9 @@ Author: 40423245
 
 <span style="background-color: #ffff00">1.</span>Fossil新增組員以及組員權限設定
 
-<span style="background-color: #ffff00">2.</span>協同產品設計實習課程-W4在Onshape繪製單連桿機構並轉出stl檔案
+<span style="background-color: #ffff00">2.</span>在Onshape繪製單連桿機構並轉出stl檔案
 
-<span style="background-color: #ffff00">3.</span>協同產品設計實習課程-W4在solvespace繪製單連桿機構並轉出stl檔案
+<span style="background-color: #ffff00">3.</span>在solvespace繪製單連桿機構並轉出stl檔案
 
 ##練習
 
@@ -25,13 +25,13 @@ fossil開啟後 ，到admin/user/add裡可新增筆記倉儲裡的成員
 
 <img src="./../data/image W4/fossil add user.png" width="480" />
 
-<span style="background-color: #ffff00">2.</span>協同產品設計實習課程-W4在Onshape繪製單連桿機構並轉出stl檔案
+<span style="background-color: #ffff00">2.</span>在Onshape繪製單連桿機構並轉出stl檔案
 
 繪製出所需零件 ，底座、軸及單連桿，並將其組立起來
 
 <a href="https://cad.onshape.com/documents/414f3a744b87a17b4d845380/w/576a159abfb695fa37f8e121/e/e6da162a4b20484587e269d6">Onshape單連桿機構</a>
 
-<span style="background-color: #ffff00">3.</span>協同產品設計實習課程-W4在solvespace繪製單連桿機構並轉出stl檔案
+<span style="background-color: #ffff00">3.</span>在solvespace繪製單連桿機構並轉出stl檔案
 
 繪製出所需零件 ，底座、軸及單連桿，並將其組立起來
 
@@ -47,11 +47,11 @@ fossil開啟後 ，到admin/user/add裡可新增筆記倉儲裡的成員
 
 <button onClick="lity('https://vimeo.com/208973584')"><span class="glyphicon glyphicon-facetime-video"></span> Fossil新增組員</button> 
 
-<span style="background-color: #ffff00">2.</span>協同產品設計實習課程-W4在Onshape繪製單連桿機構並轉出stl檔案
+<span style="background-color: #ffff00">2.</span>在Onshape繪製單連桿機構並轉出stl檔案
 
 <button onClick="lity('https://vimeo.com/208973817')"><span class="glyphicon glyphicon-facetime-video"></span> Onshape單連桿機構</button> 
 
-<span style="background-color: #ffff00">3.</span>協同產品設計實習課程-W4在solvespace繪製單連桿機構並轉出stl檔案
+<span style="background-color: #ffff00">3.</span>在solvespace繪製單連桿機構並轉出stl檔案
 
 <button onClick="lity('https://vimeo.com/208973989')"><span class="glyphicon glyphicon-facetime-video"></span> solvespace單連桿機構</button> 
 
