add image W7 and shapes W7 and edit W7.md , add W7.md note and Exercise

--- a/content/20170405.md
+++ b/content/20170405.md
@@ -13,6 +13,44 @@ Author: 40423245
 
 <span style="background-color: #ffff00">1.</span>利用fossil對倉儲進行管理練習
 
+<span style="background-color: #ffff00">2.</span>利用Onshape繪製八連桿
+
+<span style="background-color: #ffff00">3.</span>將八連桿匯入V-rep並使其作動
+
+##練習
+
+<span style="background-color: #ffff00">1.</span>利用fossil對倉儲進行管理練習
+
+利用以下指令對fossil倉儲進行管理
+
+fossil clone uri foo.fossil (將遠端的倉儲下載下來)
+
+fossil open ./../../foo.fossil (將下載下來的倉儲打開)
+
+fossil add . (將改版的倉儲推至暫存區)
+
+fossil remote-url off (將自動推送改為手動，這是與git不同之處，fossil會自動推送)
+
+fossil push https://user@192.168.X.XX  (將暫存區的檔案推至遠端)
+
+<span style="background-color: #ffff00">2.</span>利用Onshape繪製八連桿
+
+與四連桿相同利用參數指令繪製零件，並利用轉動指令及緊固指令將八連桿組立起來
+
+<img src="./../data/image W7/Onshape 8link ass.png" width="480" />
+
+##零件連結 ：<a href="https://cad.onshape.com/documents/8f27e94d797527621c7de57f/w/348f7b820c41f1e00e927d58/e/ac94e18b0e62ac367e76fc53">Onshape八連桿機構</a>
+
+<span style="background-color: #ffff00">3.</span>將八連桿匯入V-rep並使其作動
+
+與四連桿相同，只不過這次加入了更多的Dummy，因此在其從屬關係上須特別小心。
+
+<img src="./../data/image W7/V-rep 8 link relationship .png" width="480" />
+
+##影片
+
+<span style="background-color: #ffff00">1.</span>利用fossil對倉儲進行管理練習
+
 <iframe src="https://player.vimeo.com/video/212450094" width="640" height="454" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/212450094">40423245機械設計工程系 - 協同產品設計實習課程W7-利用fossil對倉儲進行管理練習</a> from <a href="https://vimeo.com/user47996237">40423245</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
