edit w6.md,add 4bar link

--- a/content/20170329.md
+++ b/content/20170329.md
@@ -27,6 +27,8 @@ Author: 40423245
 
 <img src="./../data/image W6/Onshape ass.png" width="480" />
 
+##零件連結 ：<a href="https://cad.onshape.com/documents/2a72700429928831c3ee6f49/w/f729c21a318454e00a730da2/e/6abaf474022c06b4d4cb8063">Onshape四連桿機構</a>
+
 接著將組立好的四連桿轉出stl，並匯入V-rep，將各個零件分開，加入旋轉軸，加入馬達，將桿子設為動態物件後，設好從屬關係。
 
 <img src="./../data/image W6/V-rep 從屬關係.png" width="480" />
