edit w7.md , add w7 experience

--- a/content/20170405.md
+++ b/content/20170405.md
@@ -47,6 +47,10 @@ fossil push https://user@192.168.X.XX  (將暫存區的檔案推至遠端)
 
 <img src="./../data/image W7/V-rep 8 link relationship .png" width="480" />
 
+##心得
+
+這禮拜加入更多的Dummy，以及在桿子上的從屬關係更加的複雜，讓我在練習上有些手無足措，也花了滿久的時間，這禮拜還加入了fossil的倉儲管理，fossil對我來說還相當新鮮，需要盡快地了解其架構。
+
 ##影片
 
 <span style="background-color: #ffff00">1.</span>利用fossil對倉儲進行管理練習
