edit w6.md , add w6 experience

--- a/content/20170329.md
+++ b/content/20170329.md
@@ -41,6 +41,10 @@ Author: 40423245
 
 <img src="./../data/image W6/V-rep dummy opition.png" width="480" />
 
+##心得
+
+這禮拜加入了Dummy的工具，還不太熟悉需要好好的研究一下。
+
 ##練習影片
 
 <iframe src="https://player.vimeo.com/video/211471124" width="640" height="454" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
