edit w2.md, add three title summary

--- a/content/20170301.md
+++ b/content/20170301.md
@@ -7,6 +7,10 @@ Author: 40423245
 
 ##2017Spring 協同產品設計實習課程  第二週
 
+一.利用python找出缺課人員
+
+二.在solvespace組立四連桿，並放置到Vrep裡。
+
 <!-- PELICAN_END_SUMMARY -->
 
 <span style="background-color: #ffff00">一.</span>利用python找出缺課人員
