--- a/content/20170308.md
+++ b/content/20170308.md
@@ -7,6 +7,16 @@ Author: 40423245
 
 ##2017Spring 協同產品設計實習課程  第三週
 
+一. 建置fossil
+
+二. 請完成 Solvespace 30-50-60 cm 比例的四連桿組立, 並轉出 stl 檔案, 以 import 方式轉入 V-rep
+
+三. 請利用 Onshape 完成上述相同尺寸之四連桿機構, 以 stl 轉出 (或其他格式) 後, 再轉入 V-rep
+
+四.請在 50 連桿上加上 50-50-50 正三角形, 以 Solvespace 輸入該三角形頂點運動軌跡
+
+五. 請設法驗證上述四連桿運動軌跡, 是否正確, 並設法在分組網頁中執行該四連桿機構的運動模擬
+
 <!-- PELICAN_END_SUMMARY -->
 
 ##第三週上課內容
