edit w4.md, add three title summary

--- a/content/20170315.md
+++ b/content/20170315.md
@@ -7,6 +7,12 @@ Author: 40423245
 
 ##2017Spring 協同產品設計實習課程  第四週
 
+一.Fossil新增組員以及組員權限設定
+
+二.在Onshape繪製單連桿機構並轉出stl檔案
+
+三.在solvespace繪製單連桿機構並轉出stl檔案
+
 <!-- PELICAN_END_SUMMARY -->
 
 ##上課筆記
