edit w7.md, add three title summary

--- a/content/20170405.md
+++ b/content/20170405.md
@@ -7,6 +7,12 @@ Author: 40423245
 
 ##2017Spring 協同產品設計實習課程  第七週
 
+一.利用fossil對倉儲進行管理練習
+
+二.利用Onshape繪製八連桿
+
+三.將八連桿匯入V-rep並使其作動
+
 <!-- PELICAN_END_SUMMARY -->
 
 ##上課筆記
