--- a/content/20170419.md
+++ b/content/20170419.md
@@ -7,6 +7,8 @@ Author: 40423245
 
 ##期中報告
 
+各週報告整合
+
 <!-- PELICAN_END_SUMMARY -->
 
 ##<a href="https://40423245.github.io/2017springcd_hw/blog/2017spring-cd-W1.html">第一週連結</a>
