edit W9-2.md,add Exercise3 video

--- a/content/20170419-2.md
+++ b/content/20170419-2.md
@@ -8,6 +8,8 @@ Author: 40423245
 ##期中協同查驗
 <!-- PELICAN_END_SUMMARY -->
 
+##(二) 四連桿機構協同 Trace Point 查驗
+
 (1)利用solvespace進行點路徑的分析
 
 <img src="./../data/image W9/fourbar solvespace.png" width="480" />
@@ -83,3 +85,10 @@ ctx.closePath()
 
 <iframe src="https://player.vimeo.com/video/213775242" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/213775242">40423245機械設計工程系 - 協同產品設計實習課程W9-fourbar link 40 點分析</a> from <a href="https://vimeo.com/user47996237">40423245</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+##(三) Fourbar Walker OnShape 零件協同繪圖與組立查驗
+
+(1)練習影片
+
+<iframe src="https://player.vimeo.com/video/213780670" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/213780670">40423245機械設計工程系 - 協同產品設計實習課程W9-(三) Fourbar Walker OnShape 零件協同繪圖與組立查驗</a> from <a href="https://vimeo.com/user47996237">40423245</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
