update W9-2.md,edit Title mame

--- a/content/20170419-2.md
+++ b/content/20170419-2.md
@@ -1,11 +1,11 @@
-Title: 2017/04/19 W9-2
+Title: 2017/04/19 W9 期中協同查驗與自評
 Date: 2017-04-11 11:00
 Category: Course
 Tags: notes, w9
 Slug: 2017spring-cd-W9-2
 Author: 40423245
 
-##期中協同查驗
+##期中協同查驗與自評
 <!-- PELICAN_END_SUMMARY -->
 
 ##(二) 四連桿機構協同 Trace Point 查驗
