--- a/content/20170510.md
+++ b/content/20170510.md
@@ -276,6 +276,8 @@ export const spur = defineFeature(function(context is Context, id is Id, definit
 
 2.當基圓半徑大於齒根圓時, 漸開線從基圓長起
 
+##零件連結 ：<a href="https://cad.onshape.com/documents/995d603fbed679063ef62b5a/w/e38051a643b25cd5bddc6c02/e/488a3f30ff23c217bcae1a0e">Onshape齒輪</a>
+
 ##練習影片
 
 <iframe src="https://player.vimeo.com/video/218259602" width="640" height="413" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
