edit W17.md,edit ass link http+s

--- a/content/20170614.md
+++ b/content/20170614.md
@@ -13,6 +13,59 @@ Author: 40423245
 
 
 
-3.
 
 <iframe src="./../data/W17/ass.html" width="800" height="600"></iframe>
+
+
+<!-- 導入 Brython 標準程式庫 -->
+ 
+<script src="../data/Brython-3.3.1/brython.js"></script>
+<script src="../data/Brython-3.3.1/brython_stdlib.js"></script>
+ 
+<!-- 啟動 Brython -->
+<script>
+window.onload=function(){
+// 設定 data/py 為共用程式路徑
+brython({debug:1, pythonpath:['./../data/py']});
+}
+</script>
+ 
+<!-- 以下實際利用  Brython 繪圖正齒輪-->
+<canvas id="onegear" width="800" height="600"></canvas>
+<div id="onegear_div" width="800" height="20"></div>
+ 
+<script type="text/python3">
+from browser import document as doc
+import math
+# deg 為角度轉為徑度的轉換因子
+deg = math.pi/180.
+# 定義 Spur 類別
+class Spur(object):
+    def __init__(self, ctx):
+        self.ctx = ctx
+ 
+    def create_line(self, x1, y1, x2, y2, width=3, fill="red"):
+        self.ctx.beginPath()
+        self.ctx.lineWidth = width
+        self.ctx.moveTo(x1, y1)
+        self.ctx.lineTo(x2, y2)
+        self.ctx.strokeStyle = fill
+        self.ctx.stroke()
+    #
+    # 定義一個繪正齒輪的繪圖函式
+    # midx 為齒輪圓心 x 座標
+    # midy 為齒輪圓心 y 座標
+    # rp 為節圓半徑, n 為齒數
+    # pa 為壓力角 (deg)
+    # rot 為旋轉角 (deg)
+    # 已經針對 n 大於等於 52 齒時的繪圖錯誤修正, 因為 base circle 與齒根圓大小必須進行判斷
+    def Gear(self, midx, midy, rp, n=20, pa=20, color="black"):
+        
+
+ctx.beginPath()
+ctx.fillStytle = "#000000"
+ctx.font = "40px ScriptS"
+ctx.fillText("40423245",x-50,y)
+ctx.stroke()
+
+</script>
