edit W17.md,add task2

--- a/content/20170614.md
+++ b/content/20170614.md
@@ -17,6 +17,7 @@ Author: 40423245
 <iframe src="./../data/W17/ass.html" width="800" height="600"></iframe>
 
 
+2.
 <!-- 導入 Brython 標準程式庫 -->
  
 <script src="../data/Brython-3.3.1/brython.js"></script>
@@ -29,43 +30,76 @@ window.onload=function(){
 brython({debug:1, pythonpath:['./../data/py']});
 }
 </script>
- 
-<!-- 以下實際利用  Brython 繪圖正齒輪-->
-<canvas id="onegear" width="800" height="600"></canvas>
-<div id="onegear_div" width="800" height="20"></div>
- 
+
+
+<!-- 以下實際利用  Brython 畫兩條直線 -->
+
+<canvas id="fourbar" width="800" height="600"></canvas>
+
+<div id="container1"></div>
+
 <script type="text/python3">
 from browser import document as doc
+from browser import html
 import math
-# deg 為角度轉為徑度的轉換因子
-deg = math.pi/180.
-# 定義 Spur 類別
-class Spur(object):
-    def __init__(self, ctx):
-        self.ctx = ctx
- 
-    def create_line(self, x1, y1, x2, y2, width=3, fill="red"):
-        self.ctx.beginPath()
-        self.ctx.lineWidth = width
-        self.ctx.moveTo(x1, y1)
-        self.ctx.lineTo(x2, y2)
-        self.ctx.strokeStyle = fill
-        self.ctx.stroke()
-    #
-    # 定義一個繪正齒輪的繪圖函式
-    # midx 為齒輪圓心 x 座標
-    # midy 為齒輪圓心 y 座標
-    # rp 為節圓半徑, n 為齒數
-    # pa 為壓力角 (deg)
-    # rot 為旋轉角 (deg)
-    # 已經針對 n 大於等於 52 齒時的繪圖錯誤修正, 因為 base circle 與齒根圓大小必須進行判斷
-    def Gear(self, midx, midy, rp, n=20, pa=20, color="black"):
-        
+# 準備繪圖畫布
+canvas = doc["fourbar"]
+container1 = doc['container1']
+ctx = canvas.getContext("2d")
 
+#繪製第一隻腳
 ctx.beginPath()
-ctx.fillStytle = "#000000"
-ctx.font = "40px ScriptS"
-ctx.fillText("40423245",x-50,y)
-ctx.stroke()
+ctx.moveTo(409.49,177.9)
+ctx.lineTo(452.92,202.68)
+ctx.lineTo(304.26,463.26)
+ctx.lineTo(260.83,438.48)
+ctx.fillStyle="blue"
+ctx.fill()
+
+#繪製第二隻腳
+ctx.beginPath()
+ctx.moveTo(368.85,169.62)
+ctx.lineTo(502.67,438.12)
+ctx.lineTo(457.92,460.42)
+ctx.lineTo(324.1,191.92)
+ctx.fillStyle="red"
+ctx.fill()
 
 </script>
+
+##程式碼
+<pre class="brush: python">
+<canvas id="fourbar" width="800" height="600"></canvas>
+
+<div id="container1"></div>
+
+<script type="text/python3">
+from browser import document as doc
+from browser import html
+import math
+# 準備繪圖畫布
+canvas = doc["fourbar"]
+container1 = doc['container1']
+ctx = canvas.getContext("2d")
+
+#繪製第一隻腳
+ctx.beginPath()
+ctx.moveTo(409.49,177.9)
+ctx.lineTo(452.92,202.68)
+ctx.lineTo(304.26,463.26)
+ctx.lineTo(260.83,438.48)
+ctx.fillStyle="blue"
+ctx.fill()
+
+#繪製第二隻腳
+ctx.beginPath()
+ctx.moveTo(368.85,169.62)
+ctx.lineTo(502.67,438.12)
+ctx.lineTo(457.92,460.42)
+ctx.lineTo(324.1,191.92)
+ctx.fillStyle="red"
+ctx.fill()
+
+</script>
+
+</pre>
